--- a/app/src/main/res/layout/activity_display6.xml
+++ b/app/src/main/res/layout/activity_display6.xml
@@ -49,13 +49,12 @@
             android:src="@drawable/codeinput"/>
 
 
-
         <TextView
+            android:id="@+id/bb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:id="@+id/bb"
-            />
+            android:textAlignment="center" />
 
 
 
